🐛 fix: fix repo

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lint": "eslint \"{src,packages}/**/*.{js,jsx,ts,tsx}\" --fix",
     "lint:md": "remark . --quiet --frail --output",
     "lint:style": "stylelint \"{src,packages}/**/*.{js,jsx,ts,tsx}\" --fix",
+    "prepack": "clean-pkg-json",
     "prepare": "husky install",
     "prettier": "prettier -c --write --no-error-on-unmatched-pattern \"**/**\"",
     "reinstall": "npm run clean && lerna clean && rm -rf node_modules && npm run",
@@ -67,6 +68,7 @@
     "favicons": "^7",
     "fontmin": "latest",
     "husky": "^8",
+    "lerna": "^7",
     "lint-staged": "^15",
     "multi-semantic-release": "^3",
     "remark": "^14",
