--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   ],
   "scripts": {
     "build:favicons": "real-favicon generate src/favicons/faviconDescription.json packages/assets-favicons/assets/faviconData.json packages/assets-favicons/assets",
-    "build:logo": "node src/logo/index.js",
-    "build:webfonts": "node src/webfonts/index.js",
+    "build:logo": "bun src/logo/index.ts",
+    "build:webfonts": "bun src/webfonts/index.ts",
     "clean": "lerna run clean && rm -rf es lib dist build coverage .umi .eslintcache apis",
     "lint": "eslint \"{src,packages}/**/*.{js,jsx,ts,tsx}\" --fix",
     "lint:md": "remark . --quiet --frail --output",
@@ -33,7 +33,7 @@
     "prepack": "clean-pkg-json",
     "prepare": "husky install",
     "prettier": "prettier -c --write --no-error-on-unmatched-pattern \"**/**\"",
-    "reinstall": "npm run clean && lerna clean && rm -rf node_modules && npm run",
+    "reinstall": "bun run clean && lerna clean && rm -rf node_modules && bun run",
     "release": "multi-semantic-release",
     "release:local": "multi-semantic-release --no-ci",
     "test": "real-favicon check-for-update --fail-on-update packages/assets-favicons/assets/faviconData.json"
