📦️ build: Add setup script for icons package and update version of @arietta-studio/icons package to 1.0.0

--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -43,6 +43,7 @@
     "prettier": "prettier -c --write --no-error-on-unmatched-pattern \"**/**\"",
     "pull": "git pull",
     "release": "semantic-release",
+    "setup": "dumi setup",
     "start": "npm run dev",
     "sync:md": "tsx ./scripts/genMdList.ts",
     "test": "vitest --passWithNoTests",
